Fix footer padding on mobile

--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -11,6 +11,10 @@
     display: flex;
     flex-direction: column;
 
+    @include respond-below(md) {
+        padding: 18px 0 12px;
+    }
+
     &.transparent {
         background-color: transparent !important;
     }
